make results just a lil bit bigger

--- a/linktune/web/templates/index.html
+++ b/linktune/web/templates/index.html
@@ -17,7 +17,7 @@
     <main class="">
         <section class="pb-8 text-nuxt-pink">
             <p id ="info" class="text-5xl pb-8 font-DMSans"></p>
-            <div class="relative mx-auto bg-gradient-to-r from-pink-300 to-cyan-300 w-[45rem] h-16 rounded-full pl-10">
+            <div class="relative mx-auto bg-gradient-to-r from-pink-300 to-cyan-300 w-[45rem] h-16 rounded-full pl-10 mb-6">
                 <input class="text-3xl outline-none bg-transparent text-slate-900 w-[43rem] h-16 pr-20" type="text" id="url" placeholder="enter URL to convert">
                 <button id="convert" class="absolute inset-y-0 right-0 flex items-center pr-4">
                     <img src="../static/img/convert-icon.svg" class="w-[3rem] h-[3rem]">
@@ -25,7 +25,7 @@
               </div>
         </section>
         <div class="justify-center font-DMSans">
-            <ul id="results" class="mx-auto max-w-md divide-y divide-fuchsia-300">
+            <ul id="results" class="mx-auto max-w-xl divide-y divide-fuchsia-300">
                 <!-- results populate here -->
             </ul>
         </div>
