--- a/linktune/web/templates/index.html
+++ b/linktune/web/templates/index.html
@@ -4,23 +4,41 @@
     <meta charset="UTF-8">
     <title>LinkTune</title>
     <link rel="stylesheet" href="/static/dist/css/output.css">
+    <link rel="stylesheet" href="../static/styles.css"> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Praise&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
 </head>
 <body class="bg-deep-purp h-screen flex flex-col items-center text-nuxt-pink">
-    <img src="../static/img/logo2.png" alt="LinkTune logo" width="300" height="300" class="pt-28">
+    <img src="../static/img/logo2.png" alt="LinkTune logo" width="300" height="300" class="pt-16 pb-2">
     <header>
-        <h1 class="text-9xl font-Praise pb-8">LinkTune</h1>
+        <h1 class="text-9xl font-Praise pb-10">LinkTune</h1>
     </header>
     <main class="">
-        <section class="pb-8 text-nuxt-pink">
-            <p id ="info" class="text-5xl pb-8 font-DMSans"></p>
-            <div class="relative mx-auto bg-gradient-to-r from-pink-300 to-cyan-300 w-[45rem] h-16 rounded-full pl-10 mb-6">
-                <input class="text-3xl outline-none bg-transparent text-slate-900 w-[43rem] h-16 pr-20" type="text" id="url" placeholder="enter URL to convert">
-                <button id="convert" class="absolute inset-y-0 right-0 flex items-center pr-4">
-                    <img src="../static/img/convert-icon.svg" class="w-[3rem] h-[3rem]">
+        <section class="pb-8 text-nuxt-pink flex flex-col items-center">
+            <p id ="info" class="text-6xl pb-8 mx-auto font-DMSans">&nbsp;</p>
+            <div class="relative mx-auto w-[45rem] h-20 pl-4 mb-6">
+                <div class="absolute bottom-0 left-0 w-full h-1">
+                    <div id="gradient-bar" class="bg-gradient-to-r from-pink-300 via-cyan-300 to-fuchsia-300 h-full"></div>
+                  </div>
+                <input class="text-3xl outline-none bg-transparent text-nuxt-pink w-[43rem] h-20 pr-12" type="text" id="url" placeholder="enter URL to convert">
+                <button id="convert" class="absolute inset-y-0 right-0 flex items-center pr-2">
+                    <svg class="w-[3rem] h-[3rem]" viewBox="0 0 512 512" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <defs>
+                          <linearGradient id="gradient" x1="0%" y1="0%" x2="100%" y2="0%">
+                            <stop offset="0%" stop-color="#f472b6" />
+                            <stop offset="50%" stop-color="#a78bfa" />
+                            <stop offset="100%" stop-color="#6b46c1" />
+                          </linearGradient>
+                        </defs>
+                        <title>waveform</title>
+                        <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                          <g id="icon" fill="url(#gradient)" transform="translate(42.666667, 42.666667)">
+                            <path d="M384,170.666667 L426.666667,170.666667 L426.666667,256 L384,256 L384,170.666667 Z M320,106.666667 L362.666667,106.666667 L362.666667,320 L320,320 L320,106.666667 Z M256,128 L298.666667,128 L298.666667,298.666667 L256,298.666667 L256,128 Z M192,64 L234.666667,64 L234.666667,362.666667 L192,362.666667 L192,64 Z M7.10542736e-15,170.666667 L42.6666667,170.666667 L42.6666667,256 L7.10542736e-15,256 L7.10542736e-15,170.666667 Z M64,106.666667 L106.666667,106.666667 L106.666667,320 L64,320 L64,106.666667 Z M128,7.10542736e-15 L170.666667,7.10542736e-15 L170.666667,426.666667 L128,426.666667 L128,7.10542736e-15 Z" id="Combined-Shape"></path>
+                          </g>
+                        </g>
+                    </svg>
                 </button>
               </div>
         </section>
@@ -30,6 +48,7 @@
             </ul>
         </div>
     </main>
-    <script src="../static/js/index.js"></script>
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script type="module" src="../static/js/index.js"></script>
 </body>
 </html>
