--- a/linktune/web/templates/index.html
+++ b/linktune/web/templates/index.html
@@ -22,7 +22,7 @@
                 <div class="absolute bottom-0 left-0 w-full h-1">
                     <div id="gradient-bar" class="bg-gradient-to-r from-pink-300 via-cyan-300 to-fuchsia-300 h-full"></div>
                   </div>
-                <input class="text-3xl outline-none bg-transparent text-nuxt-pink w-[43rem] h-20 pr-12" type="text" id="url" placeholder="enter URL to convert">
+                <input class="text-3xl outline-none bg-transparent text-nuxt-pink w-[43rem] h-20 pr-12" type="text" id="url" placeholder="enter URL to convert" spellcheck="false">
                 <button id="convert" class="absolute inset-y-0 right-0 flex items-center pr-2">
                     <svg class="w-[3rem] h-[3rem]" viewBox="0 0 512 512" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                         <defs>
